--- a/templates/funcov/editor.html
+++ b/templates/funcov/editor.html
@@ -110,7 +110,7 @@
                    <tr>
                      <td>{{ p.name.value }}</td>
                      <td>
-                       {% if p.select.value != '' %}
+                       {% if p.select %}
                        {{ p.select }}
                        {% else %}
                        -
