final db prep for saved covergroups

--- a/templates/funcov/editor.html
+++ b/templates/funcov/editor.html
@@ -77,7 +77,7 @@
                 {% for c in coverpoints %}
                   {{ c.name }}
                   {{ c.desc }}
-                  {{ c.type }}
+                  {{ c.kind }}
                   {{ c.expr }}
                   {{ c.sensitivityLabel }}
                   {{ c.sensitivity }}
