--- a/templates/funcov/editor.html
+++ b/templates/funcov/editor.html
@@ -11,7 +11,7 @@
         <li id="nav-coverpoint"><a data-toggle="tab" href="#coverpoint">Add Coverpoint</a></li>
         <li id="nav-cross"><a data-toggle="tab" href="#cross">Add Cross Cover</a></li>
         <li id="nav-transition"><a data-toggle="tab" href="#transition">Add Transition</a></li>
-        <!--<li id="nav-save"><a data-toggle="tab" href="#save">Save</a></li>-->
+        <li id="nav-save"><a data-toggle="tab" href="#save">Save</a></li>
     </ul>
 </div>
 
@@ -166,7 +166,6 @@
         <a type="button" href="{% url 'registration_register' %}" class="btn btn-primary btn-lg">New Features <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> </a>
       </div>
 
-<!--
       <div id="save" class="tab-pane fade">
         {% if user.is_authenticated %}
           {{ saveas.as_p }}
@@ -176,7 +175,6 @@
         {% else %}
         {% endif %}
       </div>
--->
     </div>
   </form>
 {% endblock %}
